--- a/src/css/App.css
+++ b/src/css/App.css
@@ -14,14 +14,14 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: rgba(var(--b3f, 250, 250, 250), 1);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: rgb(10, 10, 10);
 }
 
 .App-link {
