--- a/src/css/post.css
+++ b/src/css/post.css
@@ -18,15 +18,17 @@
 }
 
 .PostDate {
-  font-size: 15px;
+  font-size: calc(12px + (24 - 16) * (100vw - 400px) / (800 - 400));
   font-weight: 400;
+  text-align: left;
 }
 
 .PostMeta {
   padding: 2%;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   display: flex;
   flex-direction: row;
+  align-items: stretch;
 }
 
 .MerchantNameWrapper {
@@ -35,12 +37,13 @@
   display: flex;
   flex-direction: row;
   /* width: 150px; */
+  flex: 1;
 }
 
 .LogoImage {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
+  width: calc(60px + (24 - 16) * (100vw - 400px) / (800 - 400));
+  height: calc(60px + (24 - 16) * (100vw - 400px) / (800 - 400));
+  border-radius: 10%;
 }
 
 .LogoImageWrapper {
@@ -69,8 +72,10 @@
 .MerchantName {
   flex-direction: column;
   display: flex;
-  align-items: center;
+  justify-content: center;
+  font-size: calc(15px + (24 - 16) * (100vw - 400px) / (800 - 400));
   margin-left: 5px;
+  width: 100%;
 }
 
 .Actions {
