--- a/src/css/post.css
+++ b/src/css/post.css
@@ -54,12 +54,11 @@
 }
 
 .BelowPostMedia {
-  flex-direction: column;
   display: flex;
   text-align: left;
   justify-content: space-between;
-  margin: 10px;
-  margin-left: 20px;
+  margin: 2%;
+  font-size: calc(12px + (24 - 16) * (100vw - 400px) / (800 - 400));
 }
 
 .PostDateWrapper {
