--- a/src/css/post.css
+++ b/src/css/post.css
@@ -24,7 +24,10 @@
 }
 
 .PostMeta {
-  padding: 2%;
+  padding-top: 2%;
+  padding-bottom: 2%;
+  padding-left: 1%;
+  padding-right: 1%;
   /* justify-content: space-between; */
   display: flex;
   flex-direction: row;
@@ -74,7 +77,7 @@
   justify-content: center;
   font-size: calc(15px + (24 - 16) * (100vw - 400px) / (800 - 400));
   margin-left: 5px;
-  width: 100%;
+  flex: 1;
 }
 
 .Actions {
