--- a/src/css/postsPage.css
+++ b/src/css/postsPage.css
@@ -1,10 +1,7 @@
 .PostCard {
   margin: 2%;
   width: 95%;
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
-    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
-    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-  /* border: 5px solid rgba(0, 0, 0, 0.05); */
+  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
 }
 
 .PostsWrapper {
