--- a/src/css/comments.css
+++ b/src/css/comments.css
@@ -23,15 +23,13 @@
 }
 
 .ProfileImageContainer {
-  width: 10vh;
-  height: 8vh;
   display: flex;
   justify-content: center;
 }
 
 .ProfileImage {
-  height: 100%;
-  width: 80%;
+  height: calc(60px + (24 - 16) * (100vw - 400px) / (800 - 400));
+  width: calc(60px + (24 - 16) * (100vw - 400px) / (800 - 400));
   border-radius: 50%;
 }
 
